--- a/car_form.html
+++ b/car_form.html
@@ -13,6 +13,10 @@
                 <input id="price" name="price" class="form-control" type="number">
             </div>
             <div class="form-group">
+                <label for="min_price">Enter Minimum Price:</label>
+                <input id="min_price" name="min_price" class="form-control" type="number">
+            </div>
+            <div class="form-group">
                 <label for="miles">Enter Maximum mileage:</label>
                 <input id="miles" name="miles" class="form-control" type="number">
             </div>
